init dashtable